--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js",
-    "start": "node ./build/server.bundle.js"
+    "dev:build": "webpack --config webpack.config.js --watch",
+    "dev:start": "nodemon --watch build --exec \"node build/server.bundle.js\"",
+    "dev": "npm-run-all --parallel dev:*"
   },
   "author": "",
   "license": "ISC",
@@ -23,6 +24,8 @@
     "babel-core": "^6.26.3",
     "babel-loader": "^9.1.2",
     "babel-preset-react": "^6.24.1",
+    "nodemon": "^2.0.22",
+    "npm-run-all": "^4.1.5",
     "webpack": "^5.85.0",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^4.15.0"
