--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:build": "webpack --config webpack.config.js --watch",
-    "dev:start": "nodemon --watch build --exec \"node build/server.bundle.js\"",
-    "dev": "npm-run-all --parallel dev:*"
+    "dev:start": "nodemon --watch build --exec node \"./build/server.bundle.js\"",
+    "dev": "npm-run-all --parallel dev:**"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "koa": "^2.14.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.22.1",
