--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:build": "webpack --config webpack.config.js --watch",
+    "dev:build:server": "webpack --config webpack.server.js --watch",
+    "dev:build:client": "webpack --config webpack.client.js --watch",
     "dev:start": "nodemon --watch build --exec node \"./build/server.bundle.js\"",
     "dev": "npm-run-all --parallel dev:**"
   },
@@ -13,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "koa": "^2.14.2",
+    "koa-static": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "webpack-node-externals": "^3.0.0"
@@ -29,6 +31,7 @@
     "npm-run-all": "^4.1.5",
     "webpack": "^5.85.0",
     "webpack-cli": "^5.1.1",
-    "webpack-dev-server": "^4.15.0"
+    "webpack-dev-server": "^4.15.0",
+    "webpack-merge": "^5.9.0"
   }
 }
