--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "koa": "^2.14.2",
+    "koa-router": "^12.0.0",
     "koa-static": "^5.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "5.3.4",
     "webpack-node-externals": "^3.0.0"
   },
   "devDependencies": {
